--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
 		"nette/tester": "^1.7"
 	},
 	"suggest": {
-		"nette/application": "For Nette Application Responses"
+		"nette/application": "For integration with Nette"
 	}
 }
