--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "inteve/feed-generator",
 	"description": "Feed generator",
 	"type": "library",
-	"license": "BSD-3",
+	"license": "BSD-3-Clause",
 	"authors": [
 		{
 			"name": "Jan Pecha",
