--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "inteve/feed-generator",
+	"name": "spacek/feed-generator",
 	"description": "Feed generator",
 	"type": "library",
 	"license": "BSD-3-Clause",
