--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
 	},
 	"require": {
 		"php": ">=5.6.0",
-		"nette/utils": "^2.2"
+		"nette/utils": "^2.2 | ^3.0"
 	},
 	"require-dev": {
-		"nette/tester": "^1.7"
+		"nette/tester": "^2.0"
 	},
 	"suggest": {
 		"nette/application": "For integration with Nette"
